--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,3 +23,14 @@ services:
     ports:
       - "8080:8080"
 
+  web:
+    image: nginx
+    volumes:
+      - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
+      - ./nginx:/nginx
+    links:
+     - gitlab:gitlab.example.com
+    ports:
+      - "8081:8081"
+
+
