auth_requestを使わない方式にしてsupervisorを導入

--- a/nginx/oauth2_proxy.cfg
+++ b/nginx/oauth2_proxy.cfg
@@ -16,10 +16,9 @@
 redirect_url = "http://localhost:8081/auth/callback"
 
 ## the http url(s) of the upstream endpoint. If multiple, routing is based on path
-upstreams = [
-  "file:///dev/null"
+# upstreams = [
 #     "http://127.0.0.1:8080/"
-]
+# ]
 
 ## Log requests to stdout
 # request_logging = true
@@ -90,4 +89,7 @@ redeem_url = "http://gitlab.example.com/oauth/token"
 validate_url = "http://gitlab.example.com/api/v3/user"
 set_xauthrequest = true
 
+upstreams = [
+  "file:///srv/nginx/pages#/"
+]
 
