--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,9 +24,11 @@ services:
       - "8080:8080"
 
   web:
-    image: nginx
+    build: nginx
     volumes:
       - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
+      - ./nginx/oauth2_proxy.cfg:/etc/oauth2_proxy.cfg:ro
+      - ./nginx/supervisord.conf:/etc/supervisor/conf.d/supervisord.conf:ro
       - ./nginx:/nginx
     links:
      - gitlab:gitlab.example.com
