--- a/nginx/Dockerfile
+++ b/nginx/Dockerfile
@@ -1,7 +1,10 @@
 FROM nginx
 
 RUN apt-get update \
-  && apt-get install -y supervisor curl
+  && apt-get install -y \
+    supervisor \
+    curl \
+    python-pip
   # && apt-get clean
 RUN mkdir -p /var/log/supervisor
 
@@ -9,9 +12,13 @@ RUN mkdir -p /var/log/supervisor
 RUN curl -sSL https://github.com/bitly/oauth2_proxy/releases/download/v2.2/oauth2_proxy-2.2.0.linux-amd64.go1.8.1.tar.gz \
   | tar -zxC /usr/local/bin --strip=1
 
+# install python libraries
+RUN pip install libsaas_gitlab
+
 COPY nginx.conf /etc/nginx/nginx.conf
 COPY oauth2_proxy.cfg /etc/oauth2_proxy.cfg
 COPY supervisord.conf /etc/supervisor/conf.d/supervisord.conf
+COPY webserver.py /app/webserver.py
 
 RUN mkdir -p /srv/nginx/pages
 
