--- a/nginx/oauth2_proxy.cfg
+++ b/nginx/oauth2_proxy.cfg
@@ -87,9 +87,12 @@ provider = "gitlab"
 login_url =    "http://gitlab.example.com/oauth/authorize"
 redeem_url = "http://gitlab.example.com/oauth/token"
 validate_url = "http://gitlab.example.com/api/v3/user"
-set_xauthrequest = true
+# set_xauthrequest = true
+pass_user_headers = true
+pass_access_token = true
 
 upstreams = [
-  "file:///srv/nginx/pages#/"
+  # "file:///srv/nginx/pages#/"
+  "http://127.0.0.1:8880/"
 ]
 
