--- a/nginx/supervisord.conf
+++ b/nginx/supervisord.conf
@@ -17,4 +17,11 @@ stdout_logfile_maxbytes=0
 stderr_logfile=/dev/fd/2
 stderr_logfile_maxbytes=0
 
+[program:webserver]
+command=python /app/webserver.py 8880 "http://gitlab.example.com"
+directory=/srv/nginx/pages
+stdout_logfile=/dev/fd/1
+stdout_logfile_maxbytes=0
+stderr_logfile=/dev/fd/2
+stderr_logfile_maxbytes=0
 
