--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -28,14 +28,34 @@ http {
     #gzip  on;
 
     server {
-      error_log /error.log debug;
+      server_name ~^(?<sname>.+?).example.net$;
 
-      #listen 443 ssl;
       listen 8081;
-      server_name localhost;
-      #include ssl/ssl.conf;
+
+      location = /oauth2/start {
+        proxy_pass http://127.0.0.1:4180/oauth2/start?rd=%2F$http_host$arg_rd;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Scheme $scheme;
+      }
 
       location / {
+        proxy_pass       http://127.0.0.1:4180;
+        proxy_set_header Host                    $host;
+        proxy_set_header X-Real-IP               $remote_addr;
+        proxy_set_header X-Scheme                $scheme;
+        proxy_set_header X-Document-Base-Dir     $sname;
+
+        # proxy_pass_request_body off;
+        # proxy_set_header Content-Length "";
+      }
+    }
+
+    server {
+      listen 8081;
+      server_name auth.example.net;
+
+      location /oauth2 {
         proxy_pass       http://127.0.0.1:4180;
         proxy_set_header Host                    $host;
         proxy_set_header X-Real-IP               $remote_addr;
@@ -43,8 +63,14 @@ http {
 
         # proxy_pass_request_body off;
         # proxy_set_header Content-Length "";
+      }
 
-        autoindex on;
+      location "~^/(?<target_host>[^/]+).example.net(?<port>:\d+)?/(?<remaining_uri>.*)$" {
+          rewrite ^ $scheme://$target_host.example.net$port/$remaining_uri;
+      }
+
+      location / {
+        deny all;
       }
 
     }
